Unit2/Midterm_codes/.metadata/.plugins/org.eclipse.cdt.ui/Q8.build.log
23:30:16 **** Incremental Build of configuration Debug for project Q8 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Q8.o" "..\\src\\Q8.c" 
..\src\Q8.c: In function 'main':
..\src\Q8.c:24:2: error: too few arguments to function 'printf'
  printf()
  ^~~~~~
In file included from ..\src\Q8.c:11:0:
c:\mingw\include\stdio.h:454:38: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  int printf (const char *, ...);
                                      ^~~~~~
..\src\Q8.c:25:2: error: expected ';' before 'for'
  for(int i=0; i<size; i++){
  ^~~
..\src\Q8.c:23:6: warning: unused variable 'a' [-Wunused-variable]
  int a[size];
      ^
..\src\Q8.c: In function 'Reverse_elements':
..\src\Q8.c:17:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^

23:30:17 Build Finished (took 329ms)

